dbreplica.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-replica
  labels:
    app: postgres
spec:
  #strategy:
  #  type: Recreate
  serviceName: "postgres"  
  selector:
    matchLabels:
      app: postgres
  template: 
    metadata:
      labels:
        app: postgres
        tier: postgresReplica    
    spec:
      containers:
        - image: emhoppe/mypostgres
          name: dbreplica
          ports:
            - containerPort: 5432
              name: dbreplica
          volumeMounts:
            - name: dbreplica
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: dbreplica
          persistentVolumeClaim:
            claimName: dbreplica-pv-claim
      nodeSelector:
        name: db-pool
