flask.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: "flasksvc"
#spec:
#  ports:
#  - port: 80
#    name: flaskport
#  selector:
#    app: flask
#---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flaskpy
  labels:
    app: connect  
spec:
  serviceName: "connectsvc" 
  selector:
    matchLabels:
      app: connect
  replicas: 1
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
      - name: flaskpod
        image: emhoppe/flaskpy:latest
        ports:
          - containerPort: 5000
      nodeSelector:
        name: app-pool
