ingres.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flasking
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: connectsvc
            servicePort: 80
        - path: /flask
          backend:
            serviceName: connectsvc
            servicePort: 5000
