ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-in
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/server-snippets: |
      location /teste {
        return 302 /flask;
      }
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /flask
        backend:
          serviceName: flasksvc
          servicePort: 5000
      #- path: /teste
      #  backend:
      #    serviceName: nginxlb
      #    servicePort: 80
